fix checkboxes and select z-index (2)

--- a/modules/ext.StructuredSearch/styles.less
+++ b/modules/ext.StructuredSearch/styles.less
@@ -214,7 +214,7 @@
     padding: 0 3px;
     .fa-square, .fa-check-square {
       position: relative;
-      z-index: 1;
+      z-index: 0;
         &:before {
         z-index: 1;
         position: relative;
